--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 
 [dependencies]
 mockall = "0.11.4"
+diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
+dotenvy = "0.15"
 
 [dependencies.uuid]
 version = "1.6.1"
@@ -18,4 +20,3 @@ features = [
     "fast-rng",          # Use a faster (but still sufficiently random) RNG
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ]
-
