--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,6 @@
-[package]
-name = "rusty_ecommerce"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dev-dependencies]
-
-
-[dependencies]
-mockall = "0.11.4"
-diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
-dotenvy = "0.15"
-
-[dependencies.uuid]
-version = "1.6.1"
-features = [
-    "v4",                # Lets you generate random UUIDs
-    "fast-rng",          # Use a faster (but still sufficiently random) RNG
-    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+members = [
+    "domain",
+    "adapters"
 ]
