--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -9,7 +9,9 @@ edition = "2021"
 
 
 [dependencies]
+async-trait = "0.1.87"
 mockall = "0.11.4"
+tokio = { version = "1.44.1", features = ["full"] }
 
 [dependencies.uuid]
 version = "1.6.1"
