--- a/rest_api/Cargo.toml
+++ b/rest_api/Cargo.toml
@@ -17,12 +17,14 @@ domain = { path = "../domain" }
 adapters = { path = "../adapters" }
 actix-web = "4"
 serde = { version = "1.0.193", features = ["derive"] }
-diesel = { version = "2.1.0", features = ["postgres", "uuid", "r2d2"] }
 config = "0.13.4"
+sqlx = { version = "0.8.6", features = [
+    "runtime-tokio-native-tls",
+    "postgres",
+] }
 
 [dev-dependencies]
 reqwest = "0.11.22"
-diesel_migrations = "2.1.0"
 
 [dev-dependencies.uuid]
 version = "1.6.1"
