--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.87"
+chrono = "0.4.41"
 mockall = "0.11.4"
 tokio = { version = "1.44.1", features = ["full"] }
 
