--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -12,6 +12,8 @@ edition = "2021"
 async-trait = "0.1.87"
 chrono = "0.4.41"
 mockall = "0.11.4"
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.143"
 tokio = { version = "1.44.1", features = ["full"] }
 
 [dependencies.uuid]
