--- a/domain/Cargo.toml
+++ b/domain/Cargo.toml
@@ -15,6 +15,7 @@ mockall = "0.11.4"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 tokio = { version = "1.44.1", features = ["full"] }
+tracing = "0.1.43"
 
 [dependencies.uuid]
 version = "1.6.1"
