--- a/rest_api/Cargo.toml
+++ b/rest_api/Cargo.toml
@@ -22,6 +22,8 @@ sqlx = { version = "0.8.6", features = [
     "runtime-tokio-native-tls",
     "postgres",
 ] }
+tracing = "0.1.43"
+tracing-subscriber = "0.3.22"
 
 [dev-dependencies]
 reqwest = "0.11.22"
